src/objects/FSTR__Process_Composer_Settings__c.object
<CustomObject>
    <fields>
        <fullName>FSTR__Text_Notification_Message__c</fullName>
        <defaultValue>&quot;You have been assigned the following task.  Click the link for more detailed information.&quot;</defaultValue>
        <inlineHelpText>This is the message that will be inserted into text messages notifying the assigned user</inlineHelpText>
        <label>Text Notification Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Text_Reassignment_Message__c</fullName>
        <defaultValue>&quot;The following task has been assigned to someone else. Please disregard. Click the link for details&quot;</defaultValue>
        <inlineHelpText>This is the message that is inserted into the text message when a step is assigned to another user.</inlineHelpText>
        <label>Text Reassignment Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__TwilioAccountSid__c</fullName>
        <inlineHelpText>Defines the Twilio Account Id for use in the integration.</inlineHelpText>
        <label>Twilio AccountSid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__TwilioApplicationSid__c</fullName>
        <inlineHelpText>Defines the Twilio Application Id for use in the integration.</inlineHelpText>
        <label>Twilio ApplicationSid</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__TwilioAuthToken__c</fullName>
        <inlineHelpText>Defines the Twilio AuthToken for use in the integration.</inlineHelpText>
        <label>Twilio AuthToken</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__TwilioFromNumber__c</fullName>
        <label>Twilio From Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Use_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use QA slot to perform backend testing.</description>
        <label>Use QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Version__c</fullName>
        <inlineHelpText>The current Conga Orchestrate product version.</inlineHelpText>
        <label>Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Virtual_Step_Objects2__c</fullName>
        <inlineHelpText>Overflow field. Use only when &apos;Virtual Steps: Objects&apos; field is reaching character limits. Used to configure Virtual Steps to create/update.</inlineHelpText>
        <label>Virtual Steps: Objects (2)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Virtual_Step_Objects__c</fullName>
        <inlineHelpText>Used to configure Virtual Steps to create/update.</inlineHelpText>
        <label>Virtual Steps: Objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Virtual_Steps_Recalculate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Virtual Steps functionality. If Virtual Step Objects are configured, check to auto-calculate changes to Virtual Steps when a step record related to a process record is updated.</description>
        <inlineHelpText>If Virtual Step Objects are configured, check to auto-calculate changes to Virtual Steps when a step record related to a process record is updated.</inlineHelpText>
        <label>Virtual Steps: Recalculate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__isProcessSummaryEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Summary Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Conga Orchestrate Settings</label>
</CustomObject>